--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         font-family: Comic Sans, Comic Sans MS;
         text-align: center;
         -webkit-background-position: 0px 0px;
-        -webkit-background-repeat: repeat;
+        -webkit-background-repeat: repeat-x;
         -webkit-animation: animatedBackground 1s linear infinite;
         background-size: 20%;
         display: table-cell;
@@ -18,7 +18,7 @@
     html {
         background: -webkit-gradient(linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2), color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22));
         -webkit-background-position: 0px 0px;
-        -webkit-background-repeat: repeat;
+        -webkit-background-repeat: repeat-x;
         -webkit-animation: animatedBackground-reverse 1s linear infinite, baker 5s linear infinite;
         background-size: 20%;
     }
