--- a/index.html
+++ b/index.html
@@ -16,15 +16,16 @@
         vertical-align: middle;
     }
     html {
-        background: -webkit-gradient(linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2), color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22));
-        -webkit-background-position: 0px 0px;
-        -webkit-background-repeat: repeat-x;
-        -webkit-animation: animatedBackground-reverse 0.7s linear infinite, increaseTemperature 2s linear infinite;
-        background-size: 20%;
+        -webkit-animation: increaseTemperature 2s linear infinite;
     }
     body {
         display: table;
         text-align: center;
+        background: -webkit-gradient(linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2), color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22));
+        -webkit-background-position: 0px 0px;
+        -webkit-background-repeat: repeat-x;
+        background-size: 20%;
+        -webkit-animation: animatedBackground-reverse 0.7s linear infinite;
     }
     html, body {
         margin: 0;
